--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FINAL PROJECT</title>
+    <script src="https://kit.fontawesome.com/46158079ac.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section id="landing">
@@ -12,17 +14,16 @@
                 <div class="nav__logo">
                     <img class="nav__logo--img" src="/assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
                     <div class="nav__logo--title">Treact</div>
-                </div>
-                    <div>
-                       <ul class="nav__links">
-                        <li><a href="#" class="nav__link">About</a></li>
-                        <li><a href="#" class="nav__link">Blog</a></li>
-                        <li><a href="#" class="nav__link">Pricing</a></li>
-                        <li><a href="#" class="nav__link">Conact Us</a></li>
-                        <li><a href="#" class="nav__link">Login</a></li>
-                        <li><a href="#" class="nav__link nav__link--primary">Sign Up</a></li>
-                        </ul>
+               </div>
+                    <div class="nav__links">
+                        <a href="#" class="nav__link">About</a>
+                        <a href="#" class="nav__link">Blog</a>
+                        <a href="#" class="nav__link">Pricing</a>
+                        <a href="#" class="nav__link">Conact Us</a>
+                        <a href="#" class="nav__link">Login</a>
+                        <a href="#" class="nav__link nav__link--primary">Sign Up</a>
                     </div>
+                </div>
             </div>
         </nav>
     </section>
