--- a/index.html
+++ b/index.html
@@ -28,5 +28,23 @@
         </nav>
     </section>
     
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="header__descsription">
+                    <h1>Beautiful React Templates <span class="purple">for you</span></h1>
+                    <p class="header__descsription--para">Our templates are easy to setup, understand and customizze. Fully modular components with a variety of pages and components.</p>
+                    <div class="header__email"><input type="email" class="header__email--input" placeholder="Jane@example.com">
+                    <button class="header__email--btn">Get Started</button>
+                    </div>
+                <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
+                <img src="/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="header__customers">
+                </div>
+            <figure class="header__img--wrapper">
+                <img src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img">
+            </figure>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
