--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     
     <header>
         <div class="container">
-            <div class="row">
-                <div class="header__descsription">
+            <div class="header__row">
+                <div class="header__description">
                     <h1>Beautiful React Templates <span class="purple">for you</span></h1>
                     <p class="header__descsription--para">Our templates are easy to setup, understand and customizze. Fully modular components with a variety of pages and components.</p>
                     <div class="header__email"><input type="email" class="header__email--input" placeholder="Jane@example.com">
