--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                     <div class="nav__logo--title">Treact</div>
                </div>
                     <div class="nav__links">
-                        <a href="#" class="nav__link">About</a>
-                        <a href="#" class="nav__link">Blog</a>
-                        <a href="#" class="nav__link">Pricing</a>
-                        <a href="#" class="nav__link">Conact Us</a>
-                        <a href="#" class="nav__link">Login</a>
-                        <a href="#" class="nav__link nav__link--primary">Sign Up</a>
+                        <a href="#" class="nav__link no-cursor">About</a>
+                        <a href="#" class="nav__link no-cursor">Blog</a>
+                        <a href="#" class="nav__link no-cursor">Pricing</a>
+                        <a href="#" class="nav__link no-cursor">Conact Us</a>
+                        <a href="#" class="nav__link no-cursor">Login</a>
+                        <a href="#" class="nav__link nav__link--primary no-cursor">Sign Up</a>
                     </div>
                 </div>
             </div>
@@ -30,12 +30,12 @@
     
     <header>
         <div class="container">
-            <div class="header__row">
+            <div class="row">
                 <div class="header__description">
                     <h1>Beautiful React Templates <span class="purple">for you</span></h1>
                     <p class="header__descsription--para">Our templates are easy to setup, understand and customizze. Fully modular components with a variety of pages and components.</p>
-                    <div class="header__email"><input type="email" class="header__email--input" placeholder="Jane@example.com">
-                    <button class="header__email--btn">Get Started</button>
+                    <div class="header__email"><input type="email" class="header__email--input" placeholder="  Jane@example.com">
+                    <button class="header__email--btn no-cursor">Get Started</button>
                     </div>
                 <p class="header__customers--title">OUR TRUSTED CUSTOMERS</p>
                 <img src="/assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="header__customers">
@@ -46,5 +46,86 @@
             </div>
         </div>
     </header>
+
+    <section id="features">
+    <div class="container">
+        <div class="row__narrow">
+            <h4 class="section__tag">FEATURES</h4>
+            <h2 class="section__title">We Have Amazing <span class="purple">Service.</span></h2>   
+            <div class="section__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda maxime iste laboriosam sit totam eius aliquam vel dolore eum dolorum?
+            </div>               
+            <div class="features">
+            <div class="feature">
+                <div class="feature__row">
+                    <figure class="feature__img--wrapper"><img src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="feature__img" alt="">
+                    </figure>
+                    <div class="feature__text">
+                        <h2 class="feature__title">Secure</h2>
+                        <p class="feature__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minima facere mollitia.</p>
+                    </div>
+                </div>  
+            </div>      
+            <div class="feature">
+                <div class="feature__row">
+                    <figure class="feature__img--wrapper"><img src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" class="feature__img" alt=""></figure>
+                    <div class="feature__text">
+                        <h2 class="feature__title">24/7 Support</h2>
+                        <p class="feature__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minima facere mollitia.</p>
+                    </div>
+                </div>
+            </div>
+                <div class="feature">
+                <div class="feature__row">
+                    <figure class="feature__img--wrapper"><img src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" class="feature__img" alt=""></figure>
+                    <div class="feature__text">
+                        <h2 class="feature__title">Customizable</h2>
+                        <p class="feature__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minima facere mollitia.</p>
+                    </div>
+                </div>
+            </div>
+                <div class="feature">
+                <div class="feature__row">
+                    <figure class="feature__img--wrapper"><img src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" class="feature__img" alt=""></figure>
+                    <div class="feature__text">
+                        <h2 class="feature__title">Reliable</h2>
+                        <p class="feature__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minima facere mollitia.</p>
+                    </div>
+                </div>
+            </div>
+                <div class="feature">
+                <div class="feature__row">
+                    <figure class="feature__img--wrapper"><img src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" class="feature__img" alt=""></figure>
+                    <div class="feature__text">
+                        <h2 class="feature__title">Fast</h2>
+                        <p class="feature__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minima facere mollitia.</p>
+                    </div>
+                </div>
+                </div>
+                <div class="feature">
+                <div class="feature__row">
+                    <figure class="feature__img--wrapper"><img src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" class="feature__img" alt=""></figure>
+                    <div class="feature__text">
+                        <h2 class="feature__title">Easy</h2>
+                        <p class="feature__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minima facere mollitia.</p>
+                    </div>
+                </div>
+            </div> 
+        </section> 
+        <section id="quality">
+            <div class="container">
+                <div class="row">
+                    <div class="quality__description">
+                        <div class="section__tag">QUALITY WORK</div>
+                        <h2 class="section__title">Designed and Developed by <span class="purple">Professionals</span></h2>
+                        <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam iusto dolorem architecto excepturi consequuntur fugiat et iure magni accusantium hic.</p>
+                        <button class="btn">Learn More</button>                        
+                    </div>
+                    <figure class="quality__img--wrapper"><img src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png" class="quality__img" alt=""><svg viewBox="0 0 1280 1280" class="quality__grid"></svg>
+                    </figure>
+                </div>
+            </div>
+        </section>          
+        </div>
+    </div>
 </body>
 </html>
