--- a/index.html
+++ b/index.html
@@ -158,7 +158,208 @@
                 </div>
             </div>
         </section>
-        </div>
-    </div>
-</body>
+        <section id="values">
+            <div class="container">
+            <div class="row">
+                <div class="values__description">
+                    <div class="section__tag">VALUES</div>
+                    <h2 class="section__title">We always abide by our <span class="purple">Principles</span></h2>
+                    <div class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis quod maxime eum odit vero accusantium eius. Laboriosam rem in, est accusamus aliquam exercitationem. Aut aspernatur at tenetur sit eveniet.
+                    </div>
+                    <div class="values__list">
+                        <div class="value">
+                            <div class="value__title">
+                                <figure class="value__img--wrapper">
+                                    <img src="" class="value__img" alt=""><i class="fa-solid fa-dollar-sign"></i>
+                                </figure>
+                                <div class="value__name">Affordable</div>
+                            </div>
+                            <div class="value__para">We promise to offer you the best rate we can - at par with the industry standard.
+                            </div>
+                        <div class="value">
+                            <div class="value__title">
+                                <feature class="value__img--wrapper">
+                                    <img src="" class="value__img" alt=""><i class="fa-solid fa-suitcase"></i>
+                                </figure>
+                                <div class="value__name">Professionalism</div>
+                            </div>
+                            <div class="value__para">We assure you that our templates are designed and created by professional designers.
+                            </div>
+                        </div>
+                    </div>
+                <button class="btn">Learn More</button>
+            </div>
+            <img class="values__img" src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                </div>
+            </div>                  
+        </section>
+        <section id="pricing">
+            <div class="container">
+                <div class="row">
+                    <div class="section__tag">Pricing</div>
+                    <h2 class="section__title">Reasonable & Flexible <span class="purple">Plans</span></h2>                    
+                    <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore necessitatibus dignissimos beatae veritatis autem impedit sapiente, est qui nemo deleniti!</p>
+                    <div class="plans">
+                        <div class="plan">
+                            <div class="plan__strip"></div>
+                            <div class="plan__top">
+                                <div class="plan__name">PERSONAL</div>
+                                <div class="plan__pricing">$17.99</div>
+                                <div class="plan__duration">MONTHLY</div>
+                            </div>
+                            <div class="plan__middle">
+                                <div class="plan__target">For Individuals</div>
+                                <p class="plan__feature">30 Templates</p>
+                                <p class="plan__feature">7 Landing Pages</p>
+                                <p class="plan__feature">12 Internal Pages</p>
+                                <p class="plan__feature">Basic Assistance</p>
+                            </div>
+                            <div class="plan__bottom">
+                                <button class="plan__button">buy now</button>
+                            </div>
+                        </div>
+                        <div class="plan">
+                            <div class="plan__strip"></div>
+                            <div class="plan__top">
+                                <div class="plan__name">BUSINESS</div>
+                                <div class="plan__pricing">$37.99</div>
+                                <div class="plan__duration">MONTHLY</div>
+                            </div>
+                            <div class="plan__middle">
+                                <div class="plan__target">For Business</div>
+                                <p class="plan__feature">60 Templates</p>
+                                <p class="plan__feature">15 Landing Pages</p>
+                                <p class="plan__feature">22 Internal Pages</p>
+                                <p class="plan__feature">Priority Assistance</p>
+                            </div>
+                            <div class="plan__bottom">
+                                <button class="plan__button">buy now</button>
+                            </div>
+                        </div>
+                        <div class="plan">
+                            <div class="plan__strip"></div>
+                            <div class="plan__top">
+                                <div class="plan__name">ENTERPRISE</div>
+                                <div class="plan__pricing">$57.99</div>
+                                <div class="plan__duration">MONTHLY</div>
+                            </div>
+                            <div class="plan__middle">
+                                <div class="plan__target">For Large Companies</div>
+                                <p class="plan__feature">90 Templates</p>
+                                <p class="plan__feature">27 Landing Pages</p>
+                                <p class="plan__feature">37 Internal Pages</p>
+                                <p class="plan__feature">Personal Assistance</p>
+                            </div>
+                            <div class="plan__bottom">
+                                <button class="plan__button">buy now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="testimonials">
+            <div class="container">
+                <div class="row">
+                    <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
+                    <div class="testimonials__description">
+                        <div class="section__tag">testimonials</div>
+                        <h2 class="section__title">Our Clients <span class="purple">Love Us.</span></h2>                        
+                        <p class="section__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, optio amet pariatur dolores asperiores iure et excepturi. Debitis, explicabo suscipit!</p>
+                        <div class="testimonial">
+                            <div class="testimonial__rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <h3 class="testimonial__title">Amazing User Experience</h3>
+                            <p class="testimonial__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nostrum hic ipsam, ducimus aliquid reiciendis exercitationem debitis, incidunt vero repudiandae illo perspiciatis soluta doloremque itaque voluptate laboriosam quo provident harum molestiae velit quis, sed minima! Cumque impedit quaerat autem repudiandae, magni iure mollitia, beatae, aspernatur maiores reprehenderit rem eaque repellendus?</p>
+                            <div class="testimonial__bottom">
+                                <div class="testimonial__profile">
+                                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3.25&w=512&h=512&q=80" class="testimonial__img" alt="">
+                                    <div class="testimonial__details">
+                                        <div class="testimonial__name">Charlotte Hale</div>
+                                        <div class="testimonial__role">Director, Delos Inc.</div>
+                                    </div>
+                                </div>
+                                <div class="testimonial__buttons">
+                                    <button class="testimonial__button"></button>
+                                    <div class="divider"></div>
+                                    <button class="testimonial__button"></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="start">
+            <div class="container">
+                <div class="row">
+                    <div class="start__container">
+                        <div class="start__row">
+                            <div class="start__title">Developers all over the workld are happily using Treact.</div>
+                            <div class="start__button">
+                                <button class="start__button btn">Get Started</button>
+                                <button class="start__button btn">Contact Us</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="row footer__row">
+                <div class="footer__columns">
+                    <div class="footer__column">
+                        <div class="footer__column--title">MAIN</div>
+                        <a class="footer__column--link">Blog</a>
+                        <a class="footer__column--link">FAQs</a>
+                        <a class="footer__column--link">Support</a>
+                        <a class="footer__column--link">About Us</a>
+                    </div>
+                    <div class="footer__column">
+                        <div class="footer__column--title">PRODUCT</div>
+                        <a class="footer__column--link">Log In</a>
+                        <a class="footer__column--link">Personal</a>
+                        <a class="footer__column--link">Business</a>
+                        <a class="footer__column--link">Team</a>
+                    </div>
+                    <div class="footer__column">
+                        <div class="footer__column--title">PRESS</div>
+                        <a class="footer__column--link">Logos</a>
+                        <a class="footer__column--link">Events</a>
+                        <a class="footer__column--link">Stories</a>
+                        <a class="footer__column--link">Office</a>
+                    </div>
+                    <div class="footer__column">
+                        <div class="footer__column--title">TEAM</div>
+                        <a class="footer__column--link">Career</a>
+                        <a class="footer__column--link">Founders</a>
+                        <a class="footer__column--link">Culture</a>
+                        <a class="footer__column--link">Onboarding</a>
+                    </div>
+                    <div class="footer__column">
+                        <div class="footer__column--title">LEGAL</div>
+                        <a class="footer__column--link">QDPR</a>
+                        <a class="footer__column--link">Privacy Policy</a>
+                        <a class="footer__column--link">Terms of Service</a>
+                        <a class="footer__column--link">Disclaimer</a>
+                    </div>
+                    <div class="footer__divider"></div>
+                    <div class="fotter__bottom">
+                        <div class="footer__logo"><img src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                        <h5 class="footer__logo--text">Treact Inc.</h5></div>
+                        <div class="footer__copyright">2018 Treact Inc. All Rights Reserved.</div>
+                        <div class="footer__socials">
+                            <a class="footer__social--link"><i class="fa-brands fa-facebook"></i></a>
+                            <a class="footer__social--link"><i class="fa-brands fa-square-twitter"></i></a>
+                            <a class="footer__social--link"><i class="fa-brands fa-youtube"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+    </body>
 </html>
