--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis quod maxime eum odit vero accusantium eius. Laboriosam rem in, est accusamus aliquam exercitationem. Aut aspernatur at tenetur sit eveniet.
                     </div>
                     <div class="values__list">
-                        <div class="value">
+                        <div class="value" :nth-child(1)>
                             <div class="value__title">
                                 <figure class="value__img--wrapper">
                                     <img src="" class="value__img" alt=""><i class="fa-solid fa-dollar-sign"></i>
@@ -176,19 +176,20 @@
                             </div>
                             <div class="value__para">We promise to offer you the best rate we can - at par with the industry standard.
                             </div>
-                        <div class="value">
+                        <div class="value" :nth-child(2)>
                             <div class="value__title">
-                                <feature class="value__img--wrapper">
-                                    <img src="" class="value__img" alt=""><i class="fa-solid fa-suitcase"></i>
-                                </figure>
+                                <div class="value__img--wrapper">
+                                    <img src="#" class="value__img" alt=""><i class="fa-solid fa-suitcase"></i>
+                                </div>
                                 <div class="value__name">Professionalism</div>
                             </div>
                             <div class="value__para">We assure you that our templates are designed and created by professional designers.
                             </div>
                         </div>
                     </div>
+                    </div>
                 <button class="btn">Learn More</button>
-            </div>
+            </div>        
             <img class="values__img" src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
                 </div>
             </div>                  
