--- a/index.html
+++ b/index.html
@@ -160,23 +160,23 @@
         </section>
         <section id="values">
             <div class="container">
-            <div class="row">
+            <div class="vales__row">
                 <div class="values__description">
                     <div class="section__tag">VALUES</div>
-                    <h2 class="section__title">We always abide by our <span class="purple">Principles</span></h2>
-                    <div class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis quod maxime eum odit vero accusantium eius. Laboriosam rem in, est accusamus aliquam exercitationem. Aut aspernatur at tenetur sit eveniet.
+                    <h2 class="section__title">We always abide by our <span class="purple">Principles</span></h2></div>
+                    <div class="values__section--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis quod maxime eum odit vero accusantium eius. Laboriosam rem in, est accusamus aliquam exercitationem. Aut aspernatur at tenetur sit eveniet.
                     </div>
                     <div class="values__list">
-                        <div class="value" :nth-child(1)>
+                        <div class="value">
                             <div class="value__title">
-                                <figure class="value__img--wrapper">
+                                <figure class="value__img--wrapper" >
                                     <img src="" class="value__img" alt=""><i class="fa-solid fa-dollar-sign"></i>
                                 </figure>
                                 <div class="value__name">Affordable</div>
                             </div>
                             <div class="value__para">We promise to offer you the best rate we can - at par with the industry standard.
                             </div>
-                        <div class="value" :nth-child(2)>
+                        <div class="value">
                             <div class="value__title">
                                 <div class="value__img--wrapper">
                                     <img src="#" class="value__img" alt=""><i class="fa-solid fa-suitcase"></i>
@@ -196,16 +196,16 @@
         </section>
         <section id="pricing">
             <div class="container">
-                <div class="row">
-                    <div class="section__tag">Pricing</div>
-                    <h2 class="section__title">Reasonable & Flexible <span class="purple">Plans</span></h2>                    
-                    <p class="section__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore necessitatibus dignissimos beatae veritatis autem impedit sapiente, est qui nemo deleniti!</p>
+                <div class="price__row">
+                    <div class="pricing__section--tag"><span class="purple">Pricing</span></div>
+                    <h2 class="pricing__section--title">Reasonable & Flexible <span class="purple">Plans</span></h2>                    
+                    <p class="pricing__section--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore necessitatibus dignissimos beatae veritatis autem impedit sapiente, est qui nemo deleniti!</p>
                     <div class="plans">
                         <div class="plan">
-                            <div class="plan__strip"></div>
+                            <div class="plan__stripe"></div>
                             <div class="plan__top">
                                 <div class="plan__name">PERSONAL</div>
-                                <div class="plan__pricing">$17.99</div>
+                                <div class="plan__price">$17.99</div>
                                 <div class="plan__duration">MONTHLY</div>
                             </div>
                             <div class="plan__middle">
@@ -216,14 +216,14 @@
                                 <p class="plan__feature">Basic Assistance</p>
                             </div>
                             <div class="plan__bottom">
-                                <button class="plan__button">buy now</button>
+                                <button class="plan__button">BUY NOW</button>
                             </div>
                         </div>
                         <div class="plan">
-                            <div class="plan__strip"></div>
+                            <div class="plan__stripe"></div>
                             <div class="plan__top">
                                 <div class="plan__name">BUSINESS</div>
-                                <div class="plan__pricing">$37.99</div>
+                                <div class="plan__price">$37.99</div>
                                 <div class="plan__duration">MONTHLY</div>
                             </div>
                             <div class="plan__middle">
@@ -234,14 +234,14 @@
                                 <p class="plan__feature">Priority Assistance</p>
                             </div>
                             <div class="plan__bottom">
-                                <button class="plan__button">buy now</button>
+                                <button class="plan__button">BUY NOW</button>
                             </div>
                         </div>
                         <div class="plan">
-                            <div class="plan__strip"></div>
+                            <div class="plan__stripe"></div>
                             <div class="plan__top">
                                 <div class="plan__name">ENTERPRISE</div>
-                                <div class="plan__pricing">$57.99</div>
+                                <div class="plan__price">$57.99</div>
                                 <div class="plan__duration">MONTHLY</div>
                             </div>
                             <div class="plan__middle">
@@ -252,7 +252,7 @@
                                 <p class="plan__feature">Personal Assistance</p>
                             </div>
                             <div class="plan__bottom">
-                                <button class="plan__button">buy now</button>
+                                <button class="plan__button">BUY NOW</button>
                             </div>
                         </div>
                     </div>
@@ -262,9 +262,9 @@
         <section id="testimonials">
             <div class="container">
                 <div class="row">
-                    <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
+                    <img src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" class="testimonials__img" alt="">
                     <div class="testimonials__description">
-                        <div class="section__tag">testimonials</div>
+                        <div class="section__tag">Testimonials</div>
                         <h2 class="section__title">Our Clients <span class="purple">Love Us.</span></h2>                        
                         <p class="section__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, optio amet pariatur dolores asperiores iure et excepturi. Debitis, explicabo suscipit!</p>
                         <div class="testimonial">
@@ -286,9 +286,9 @@
                                     </div>
                                 </div>
                                 <div class="testimonial__buttons">
-                                    <button class="testimonial__button"></button>
+                                    <button class="testimonial__button"><i class="fa-solid fa-circle-left"></i></button>
                                     <div class="divider"></div>
-                                    <button class="testimonial__button"></button>
+                                    <button class="testimonial__button"><i class="fa-solid fa-circle-right"></i></button>
                                 </div>
                             </div>
                         </div>
