--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
                                     </div>
                                 </div>
                                 <div class="testimonial__buttons">
-                                    <button class="testimonial__button"><i class="fa-solid fa-circle-left"></i></button>
+                                    <button class="testimonial__button"><i class="fa-solid fa-arrow-left"></i></button>
                                     <div class="divider"></div>
-                                    <button class="testimonial__button"><i class="fa-solid fa-circle-right"></i></button>
+                                    <button class="testimonial__button"><i class="fa-solid fa-arrow-right"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -302,7 +302,7 @@
                     <div class="start__container">
                         <div class="start__row">
                             <div class="start__title">Developers all over the workld are happily using Treact.</div>
-                            <div class="start__button">
+                            <div class="start__buttons">
                                 <button class="start__button btn">Get Started</button>
                                 <button class="start__button btn">Contact Us</button>
                             </div>
@@ -312,7 +312,8 @@
             </div>
         </section>
         <footer>
-            <div class="row footer__row">
+            <div class="footer__container">
+            <div class="footer__row">
                 <div class="footer__columns">
                     <div class="footer__column">
                         <div class="footer__column--title">MAIN</div>
@@ -350,8 +351,8 @@
                         <a class="footer__column--link">Disclaimer</a>
                     </div>
                     <div class="footer__divider"></div>
-                    <div class="fotter__bottom">
-                        <div class="footer__logo"><img src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                    <div class="footer__bottom">
+                        <div class="footer__logo"><img src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" class="footer__logo--img" alt="">
                         <h5 class="footer__logo--text">Treact Inc.</h5></div>
                         <div class="footer__copyright">2018 Treact Inc. All Rights Reserved.</div>
                         <div class="footer__socials">
@@ -360,6 +361,7 @@
                             <a class="footer__social--link"><i class="fa-brands fa-youtube"></i></a>
                         </div>
                     </div>
+                </div>
                 </div>
             </footer>
     </body>
