--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                         <a href="#" class="nav__link no-cursor">Login</a>
                         <a href="#" class="nav__link nav__link--primary no-cursor">Sign Up</a>
                     </div>
+                    <button class="btn__menu" onclick="openMenu()"><i class="fa-solid fa-bars"></i></button>
+                    <div class="menu__backdrop">
+                        <button class="btn__menu btn__menu--close" onclick="closeMenu()"><i class="fa-solid fa-times"></i></button>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -160,38 +164,39 @@
         </section>
         <section id="values">
             <div class="container">
-            <div class="vales__row">
+            <div class="row">
                 <div class="values__description">
                     <div class="section__tag">VALUES</div>
-                    <h2 class="section__title">We always abide by our <span class="purple">Principles</span></h2></div>
+                    <h2 class="section__title">We always abide by our <span class="purple">Principles</span></h2>
                     <div class="values__section--para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quis quod maxime eum odit vero accusantium eius. Laboriosam rem in, est accusamus aliquam exercitationem. Aut aspernatur at tenetur sit eveniet.
                     </div>
                     <div class="values__list">
                         <div class="value">
                             <div class="value__title">
                                 <figure class="value__img--wrapper" >
-                                    <img src="" class="value__img" alt=""><i class="fa-solid fa-dollar-sign"></i>
+                                    <h3 class="value__img"><i class="fa-solid fa-dollar-sign"></i></h3>
                                 </figure>
                                 <div class="value__name">Affordable</div>
                             </div>
                             <div class="value__para">We promise to offer you the best rate we can - at par with the industry standard.
                             </div>
+                        </div>
                         <div class="value">
                             <div class="value__title">
-                                <div class="value__img--wrapper">
-                                    <img src="#" class="value__img" alt=""><i class="fa-solid fa-suitcase"></i>
-                                </div>
+                                <figure class="value__img--wrapper">
+                                    <h3 class="value__img"><i class="fa-solid fa-suitcase"></i></h3>
+                                </figure>
                                 <div class="value__name">Professionalism</div>
                             </div>
                             <div class="value__para">We assure you that our templates are designed and created by professional designers.
                             </div>
                         </div>
                     </div>
-                    </div>
-                <button class="btn">Learn More</button>
-            </div>        
-            <img class="values__img" src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                 <button class="btn">Learn More</button>
                 </div>
+                <img class="values__img" src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                
+            </div>
             </div>                  
         </section>
         <section id="pricing">
@@ -227,7 +232,7 @@
                                 <div class="plan__duration">MONTHLY</div>
                             </div>
                             <div class="plan__middle">
-                                <div class="plan__target">For Business</div>
+                                <div class="plan__target">For Small Businesses</div>
                                 <p class="plan__feature">60 Templates</p>
                                 <p class="plan__feature">15 Landing Pages</p>
                                 <p class="plan__feature">22 Internal Pages</p>
@@ -301,7 +306,7 @@
                 <div class="row">
                     <div class="start__container">
                         <div class="start__row">
-                            <div class="start__title">Developers all over the workld are happily using Treact.</div>
+                            <div class="start__title">Developers all over the world are happily using Treact.</div>
                             <div class="start__buttons">
                                 <button class="start__button btn">Get Started</button>
                                 <button class="start__button btn">Contact Us</button>
