--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                     <div class="nav__logo--title">Treact</div>
                </div>
                     <div class="nav__links">
-                        <a href="#" class="nav__link no-cursor">About</a>
-                        <a href="#" class="nav__link no-cursor">Blog</a>
-                        <a href="#" class="nav__link no-cursor">Pricing</a>
-                        <a href="#" class="nav__link no-cursor">Conact Us</a>
-                        <a href="#" class="nav__link no-cursor">Login</a>
-                        <a href="#" class="nav__link nav__link--primary no-cursor">Sign Up</a>
+                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">About</a>
+                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Blog</a>
+                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Pricing</a>
+                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Conact Us</a>
+                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Login</a>
+                        <a href="#" class="nav__link nav__link--primary no-cursor" onclick="openMenu()">Sign Up</a>
                     </div>
                     <button class="btn__menu" onclick="openMenu()"><i class="fa-solid fa-bars"></i></button>
                     <div class="menu__backdrop">
@@ -221,7 +221,7 @@
                                 <p class="plan__feature">Basic Assistance</p>
                             </div>
                             <div class="plan__bottom">
-                                <button class="plan__button">BUY NOW</button>
+                                <button class="plan__button no-cursor">BUY NOW</button>
                             </div>
                         </div>
                         <div class="plan">
@@ -239,7 +239,7 @@
                                 <p class="plan__feature">Priority Assistance</p>
                             </div>
                             <div class="plan__bottom">
-                                <button class="plan__button">BUY NOW</button>
+                                <button class="plan__button no-cursor">BUY NOW</button>
                             </div>
                         </div>
                         <div class="plan">
@@ -257,7 +257,7 @@
                                 <p class="plan__feature">Personal Assistance</p>
                             </div>
                             <div class="plan__bottom">
-                                <button class="plan__button">BUY NOW</button>
+                                <button class="plan__button no-cursor">BUY NOW</button>
                             </div>
                         </div>
                     </div>
