--- a/index.html
+++ b/index.html
@@ -16,16 +16,24 @@
                     <div class="nav__logo--title">Treact</div>
                </div>
                     <div class="nav__links">
-                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">About</a>
-                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Blog</a>
-                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Pricing</a>
-                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Conact Us</a>
-                        <a href="#" class="nav__link no-cursor" onclick="openMenu()">Login</a>
-                        <a href="#" class="nav__link nav__link--primary no-cursor" onclick="openMenu()">Sign Up</a>
+                     <a href="#" class="nav__link">About</a>
+                     <a href="#" class="nav__link">Blog</a>
+                     <a href="#" class="nav__link">Pricing</a>
+                     <a href="#" class="nav__link">Conact Us</a>
+                     <a hef="#" class="nav__link">Login</a>
+                     <a href="#" class="nav__link nav__link--primary">Sign Up</a>
                     </div>
                     <button class="btn__menu" onclick="openMenu()"><i class="fa-solid fa-bars"></i></button>
                     <div class="menu__backdrop">
                         <button class="btn__menu btn__menu--close" onclick="closeMenu()"><i class="fa-solid fa-times"></i></button>
+                        <div class="menu__links">
+                            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Conact Us</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Login</a></li>
+                            <li class="menu__list"><a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign Up</a></li>
+                        </div>
                     </div>
                 </div>
             </div>
