--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>FINAL PROJECT</title>
     <script src="https://kit.fontawesome.com/46158079ac.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <section id="landing">
         <nav>
-            <div class="row nav__row">
+            <div class="nav__row">
                 <div class="nav__logo">
                     <img class="nav__logo--img" src="/assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
                     <div class="nav__logo--title">Treact</div>
@@ -26,14 +27,14 @@
                     <button class="btn__menu" onclick="openMenu()"><i class="fa-solid fa-bars"></i></button>
                     <div class="menu__backdrop">
                         <button class="btn__menu btn__menu--close" onclick="closeMenu()"><i class="fa-solid fa-times"></i></button>
-                        <div class="menu__links">
+                        <ul class="menu__links">
                             <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">About</a></li>
                             <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Blog</a></li>
                             <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Pricing</a></li>
                             <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Conact Us</a></li>
                             <li class="menu__list"><a href="#" class="menu__link" onclick="closeMenu()">Login</a></li>
                             <li class="menu__list"><a href="#" class="menu__link menu__link--primary" onclick="closeMenu()">Sign Up</a></li>
-                        </div>
+                        </ul>
                     </div>
                 </div>
             </div>
